Merge statistics